Added functionality to add an item to the checkout

--- a/checkout_kata.test/checkout_kata.test.csproj
+++ b/checkout_kata.test/checkout_kata.test.csproj
@@ -50,8 +50,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="TestCheckout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\checkout_kata\checkout_kata.csproj">
+      <Project>{D663046F-71DB-4BD5-B516-2B9561CA7732}</Project>
+      <Name>checkout_kata</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
