Added interfaces for checkout and checkoutitem.

--- a/checkout_kata/checkout_kata.csproj
+++ b/checkout_kata/checkout_kata.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="Checkout.cs" />
     <Compile Include="CheckoutItem.cs" />
+    <Compile Include="ICheckout.cs" />
+    <Compile Include="ICheckoutItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
