Added new TestCheckoutItem class.
Added new failing test for MultiBuySpecialOfffer class.

--- a/checkout_kata.test/checkout_kata.test.csproj
+++ b/checkout_kata.test/checkout_kata.test.csproj
@@ -54,6 +54,8 @@
   <ItemGroup>
     <Compile Include="TestCheckout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCheckoutItem.cs" />
+    <Compile Include="TestMultiBuySpecialOffer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\checkout_kata\checkout_kata.csproj">
