Refactored a bit.  Added CheckOutItemCollection class, to encapsulate functionality regarding adding/removing items.  And moved the test for adding items to the collection to a new test class.
Added the CalculateTotal functionality, but moved it into a separate class CheckoutCalculator.

This commit is larger than I'd like, these kata's are useful to hone these skills!

--- a/checkout_kata.test/checkout_kata.test.csproj
+++ b/checkout_kata.test/checkout_kata.test.csproj
@@ -54,7 +54,9 @@
   <ItemGroup>
     <Compile Include="TestCheckout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCheckoutCalculator.cs" />
     <Compile Include="TestCheckoutItem.cs" />
+    <Compile Include="TestCheckOutItemCollection.cs" />
     <Compile Include="TestMultiBuySpecialOffer.cs" />
   </ItemGroup>
   <ItemGroup>
